--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,7 @@
 	<depend>roscpp</depend>
 	<depend>phidgets_api</depend>
 	<depend>nav_msgs</depend>
+	<depend>tf</depend>
 
 	<build_depend>libboost-dev</build_depend>
 </package>
