--- a/package.xml
+++ b/package.xml
@@ -15,7 +15,9 @@
 	<depend>roscpp</depend>
 	<depend>phidgets_api</depend>
 	<depend>nav_msgs</depend>
-	<depend>tf</depend>
+	<depend>tf2_ros</depend>
+	<depend>geometry_msgs</depend>
+	<depend>tf2_geometry_msgs</depend>
 
 	<build_depend>libboost-dev</build_depend>
 	<build_depend>ros_cpp11_range</build_depend>
