compiling encoder publisher, functionality untested

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
 
-# c++14 support by doing this
-# don't rely on compiler-specific extensions
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
-add_definitions(-std=c++14)
 
 project(phidgets_encoder)
 
@@ -14,36 +11,22 @@ find_package(Boost REQUIRED)
 find_package(
 	catkin REQUIRED
 	COMPONENTS
-		roscpp
 		phidgets_api
-		nav_msgs
-		tf2_ros
-		ros_cpp11_range
-		geometry_msgs
-		tf2_geometry_msgs
+		roscpp
+		sensor_msgs
 )
 
 catkin_package(DEPENDS Boost)
 
-include_directories(${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
+include_directories(include/ ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 
-add_executable(phidgets_encoder_node src/phidgets_encoder_node.cpp)
+add_executable(phidgets_encoder_node src/phidgets_encoder_node.cpp
+               src/phidgets_wheels_publisher.cpp)
 target_link_libraries(phidgets_encoder_node ${catkin_LIBRARIES})
 add_dependencies(phidgets_encoder_node ${catkin_EXPORTED_TARGETS})
 
-add_executable(encoder_test src/encoder_test.cpp)
-target_link_libraries(encoder_test ${catkin_LIBRARIES})
-add_dependencies(encoder_test ${catkin_EXPORTED_TARGETS})
-
 install(
 	TARGETS phidgets_encoder_node
-	ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-	LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-	RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
-)
-
-install(
-	TARGETS encoder_test
 	ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 	LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 	RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
