--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <package format = "2">
 	<name>phidgets_encoder</name>
-	<version>0.1.0</version>
+	<version>0.1.1</version>
 	<description>
 		Publishes a nav_msgs/Odometry message based on wheel encoder data.
 	</description>
@@ -12,13 +12,9 @@
 
 	<buildtool_depend>catkin</buildtool_depend>
 
-	<depend>roscpp</depend>
 	<depend>phidgets_api</depend>
-	<depend>nav_msgs</depend>
-	<depend>tf2_ros</depend>
-	<depend>geometry_msgs</depend>
-	<depend>tf2_geometry_msgs</depend>
+	<depend>roscpp</depend>
+	<depend>sensor_msgs</depend>
 
 	<build_depend>libboost-dev</build_depend>
-	<build_depend>ros_cpp11_range</build_depend>
 </package>
