--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <package format = "2">
 	<name>phidgets_encoder</name>
-	<version>0.1.1</version>
+	<version>0.2.0</version>
 	<description>
 		Publishes a nav_msgs/Odometry message based on wheel encoder data.
 	</description>
@@ -15,6 +15,5 @@
 	<depend>phidgets_api</depend>
 	<depend>roscpp</depend>
 	<depend>sensor_msgs</depend>
-
-	<build_depend>libboost-dev</build_depend>
+	<depend>umigv_utilities</depend>
 </package>
